Changes to github text
This is a test to see if I can move the root folder on my local machine, make some changes in my test editor and save those changes to my github repo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<h1> This is a test</h1>
+<h1> This is the first of many github projects that I will be doing in the months to come. This is to be used as an initial test to see if I can use github and it's functionality successfully.</h1>
 
 
 
